Fix the spacing errors in the main file

--- a/css/main.css
+++ b/css/main.css
@@ -11,56 +11,67 @@ html {
 body {
   margin: 0;
   min-width: 320px;
-  position: relative;
-  overflow: hidden;
 }
 
 .banner {
   background-color: #2b3851;
-  position: absolute;
-  width: 100%;
+  height: 15em;
 }
 
 .robot {
-  top: 1em;
   width: 320px;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  height: 320px;
 }
 
 .robot-body {
   width: 320px;
-  position: absolute;
+  top: 53px;
   left: 50%;
+  position: absolute;
   transform: translateX(-50%);
-  top: 2.35em;
-
 }
 
 .robot-brain {
   width: 46px;
+  top: 50px;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  top: 3em;
+
 }
 
 .robot-head-right,
 .robot-head-left {
   width: 125px;
-  position: absolute;
-  top: .7px;
-
 }
 
 .robot-head-left {
-  float: left;
-  left: 2.2em;
-
+  position: absolute;
+  left: 44%;
+  transform: translateX(-56%);
+  top: 14px;
 }
 
 .robot-head-right {
-  float: right;
-  left: 10em;
+  position: absolute;
+  left: 56%;
+  transform: translateX(-44%);
+  top: 14px;
+}
+
+.robot:hover .robot-head-left {
+  position: relative;
+  left: 15em;
+  top: 2px;
+}
+
+.robot:hover .robot-head-right {
+  position: relative;
+  left: 38em;
+  top: 2px;
+}
+
+.robot:hover .robot-brain {
+  position: relative;
+  top: 5px;
 }
